--- a/src/main/front/orderCSS.css
+++ b/src/main/front/orderCSS.css
@@ -16,13 +16,28 @@ body{
     margin: 20px auto;
     position: relative;
   }
+
+#result-place {
+  font-family:'Open Sans Condensed', sans-serif;
+  width: 400px;
+  min-width:250px;
+  margin: 20px auto;
+  position: relative;
+}
   
-  #registration-form .fieldset {
-    background-color:#d5d5d5;
-  
-    border-radius: 3px;
-    
-  }
+#registration-form .fieldset {
+background-color:#d5d5d5;
+
+border-radius: 3px;
+
+}
+
+#result-place .fieldset {
+  background-color:#d5d5d5;
+
+  border-radius: 3px;
+
+}
   
    #registration-form legend {
     text-align: center;
